--- a/index1.html
+++ b/index1.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>This Is My Title.</title>
+    <title>New Project</title>
 </head>
 <body>
-    <p>MY First Commit.</p>
+    <p>MY C4 Commit.</p>
 </body>
 </html>
