--- a/index1.html
+++ b/index1.html
@@ -6,6 +6,6 @@
     <title>New Project</title>
 </head>
 <body>
-    <p>MY C6 Commit.</p>
+    <p>MY C6 Commit.It's just a trial for more practice.</p>
 </body>
 </html>
